# CFmake

./: .devcontainer.json  .gitignore  .gitmodules  Authentications.cmake  Buildvc.bat  Buildvc12.bat  CMakeLists.txt  CSToolkit.cmake  CSToolkitDLPX-HI.cmake  CSToolkitHILS.cmake  CSToolkitIHILS.cmake  CSToolkitINM.cmake  CSToolkitStarlinx.cmake  Common.cmake  CommonDlpxPi.cmake  CommonINM.cmake  CommonStarlinx.cmake  Copy.cmake  CopyIfExist.cmake  Dependencies.checkout  Dependencies.cmake  Deploy.cmake  DevToStable.bat  Documentations.cmake  FindAcoReader.cmake  FindApiTacticalX.cmake  FindCodxAsterix.cmake  FindCodxCLA.cmake  FindCodxL11.cmake  FindCodxL16.cmake  FindCodxL22.cmake  FindCodxLOC.cmake  FindCodxStarlinx.cmake  FindCommon.cmake  FindCrashRpt.cmake  FindCryptopp.cmake  FindCxConversionUtils.cmake  FindCxLicensing.cmake  FindCxMessagesUtils.cmake  FindCxUtils.cmake  (+93 more)
Dev/: StreamWork.pro  StreamWork.sln  borlanddir_build.bat  vcdir_build.bat
Documentation/Conception/: StreamLib.doc
Documentation/Doxygen/: Doxyfile
Documentation/UserManual/: StreamWork.MUL.V1.doc
Framework.StreamWork/trunk/: StreamWork.sln  StreamWorkAndDependencies.sln
LdtManagerViews/: view_sw_jenkins.xml
Services/SwServiceConfiguration/: CMakeLists.txt
Services/SwServiceMainWindow/: CMakeLists.txt
Services/SwServiceShortcut/: CMakeLists.txt
Services/SwServiceTools/: CMakeLists.txt
Sources/StreamWorkEditor/: AnchorableContainer.h  ComponentGraphicItem.cpp  ComponentGraphicItem.h  ConnectorGraphicItem.h  EditionService.cpp  EditionService.h  EditorPropertiesItemDelegate.cpp  GlobalConf.cpp  GraphicsLoaderV1.cpp  GraphicsLoaderV1.h  GraphicsResources.cpp  GraphicsResources.h  IAnchorableObserver.h  ISelectionObserver.h  InterestArea.h  LinkGraphicItem.h  LogView.h  MainWindow.cpp  MainWindow.h  ManageLinkColor.cpp  ManageLinkColor.h  MenuManager.cpp  MenuManager.h  (+25 more)
StreamWorkEditor/: CMakeLists.txt
SwConfiguration/: CMakeLists.txt
SwCore/: CMakeLists.txt
SwDataBase/: CMakeLists.txt
SwEditor/: CMakeLists.txt
SwExecution/: CMakeLists.txt
SwFoundation/: CMakeLists.txt
SwGui/: CMakeLists.txt
SwLauncher/: CMakeLists.txt
SwModel/: CMakeLists.txt
SwRecord/: CMakeLists.txt
documentation/: mkdocs.yml
example/: CMakeLists.txt
example/MyCombinedStaticLib/: CMakeLists.txt
example/MyCombinedStaticLib/include/: MyClassA.h  MyCombinedStaticLibClass.h
example/MyCombinedStaticLib/src/: MyCombinedStaticLibClass.cpp
example/MyExe/: CMakeLists.txt
example/MyExe/src/: main.cpp
example/MyExeWithPlugins/: CMakeLists.txt
example/MyExeWithPlugins/src/: main.cpp
example/MyInterface/: CMakeLists.txt
example/MyInterface/include/: MyClass.h
example/MyInterface/include/inc2/: MyClass2.h
example/MyLib/: CMakeLists.txt
example/MyLib/include/: MyClassA.h
example/MyLib/src/: AboutWidget.cpp  AboutWidget.h  MyClass.cpp  MyClassA.cpp  MyQtClassA.cpp
example/MyOtherStaticLib/: CMakeLists.txt
example/MyOtherStaticLib/include/: MyOtherStaticLibClass.h
example/MyOtherStaticLib/src/: MyOtherStaticLibClass.cpp
example/MyPlugin/: CMakeLists.txt
example/MyPlugin/include/: MyClassB.h  MyPluginClass.h
example/MyPlugin/src/: MyClassB.cpp  MyPluginClass.cpp  MyPluginClass.h
example/MyQtExe/: CMakeLists.txt  SxMissionPlanning.qrc
example/MyQtExe/src/: MyQtClassA.h  main.cpp
example/MyQtLib/: CMakeLists.txt
example/MyQtLib/include/: MyQtClass.h  SnBusObservableEntityProperty.h  SnWidgets.h  qtbuttonpropertybrowser.h  qteditorfactory.h  qtgroupboxpropertybrowser.h  qtpropertybrowser.h  qtpropertybrowserutils_p.h  qtpropertymanager.h  qttreepropertybrowser.h  qtvariantproperty.h
example/MyQtLib/resources/: MyQtLib.qrc
example/MyQtLib/resources/recursive/: recusrive_file.txt
example/MyQtLib/src/: MyClassA.cpp  MyQtClass.cpp  MyWidget.cpp  MyWidget.h  MyWidget.ui
example/MyQtLib/src/propertybrowser/: SnBusObservableEntityProperty.cpp  qtbuttonpropertybrowser.cpp  qteditorfactory.cpp  qtgroupboxpropertybrowser.cpp  qtpropertybrowser.cpp  qtpropertybrowserutils.cpp  qtpropertymanager.cpp  qttreepropertybrowser.cpp  qtvariantproperty.cpp
example/MySharedAndStaticLib/: CMakeLists.txt
example/MySharedAndStaticLib/include/: MyClass.h
example/MyStaticLib/: CMakeLists.txt
example/MyStaticLib/include/: MyStaticLibClass.h  MyStaticLibClass2.h
example/MyStaticLib/src/: AboutWidget.ui  MyStaticLibClass.cpp  MyStaticLibClass2.cpp
example/cmake/: FindBoost.cmake
example/gallery/: CMakeLists.txt
example/gallery/resources/: gallery.qrc
installer/: _files.nsh  _properties.nsh  createSetup.bat  license.rtf  productName.vbs  project.nsi
license/: CS_GROUP_EULA.rtf
modules/: FindBoost.cmake  FindCrashRpt.cmake  FindFarSync.cmake  FindOpenFlightAPI.cmake  FindOpenSSL.cmake  FindPcap.cmake  FindQwt.cmake  FindVegaPrime.cmake  FindWinPcap.cmake  FindZLIB.cmake  Findccl.cmake  FindlibVLC.cmake
presets/: HILS.json  INM.json  presetINM.json
scripts/: cstoolkit_copy.cmake  cstoolkit_lock.cmake
templates/: ComponentProperties.rc.in  ExternalDocumentation.doxyfile.in  FetchCODXConfig.linux.in  FetchCODXConfig.win.in  FetchLegacyConfig.in  FetchLegacyConfig.linux.in  FetchLegacyConfig.win.in  InternalDocumentation.doxyfile.in  PackageConfig.cmake.in  PackageProperties.md.in  ProjectConfig.cmake.in  TargetConfig.cmake.in  Target_qt_deploy.cmake.in  Target_resource.rc.in  gitinfo.in  info_exe_target.cpp.in  info_exe_target.h.in  info_lib_exe.cpp.in  info_lib_target.cpp.in  info_target.cpp.in  info_target.h.in  target_info.cpp.in  target_info.h.in  target_info_qapp.cpp.in
test/: CSToolkit.cmake  README.md  devpaths_QT5.xml
utility/: Arguments.cmake  BuildType.cmake  CODX.cmake  CPackRules.cmake  Color.cmake  Conan.cmake  CppRules.cmake  Debug.cmake  Deploy.cmake  Fetch.cmake  File.cmake  Genex.cmake  Git.cmake  Info.cmake  Internal.cmake  PostConfigure.cmake  PostProject.cmake  Qt.cmake  Regex.cmake  Streamwork.cmake  Target.cmake  Test.cmake  Timer.cmake  Version.cmake  VortexOpenSplice.cmake  WIndows.cmake  Windows.cmake  WindowsRcFile.cmake  mkspecs.cmake
(+3432 files in other folders)
