cmake_minimum_required(VERSION 3.21)

project(Streamwork)

option(LICENSE "This variable defined if the project use license" ON)

set(CSTOOLKIT_AUTO_DEPLOY_QT OFF)

if(PROJECT_IS_TOP_LEVEL)
    include("${CMAKE_SOURCE_DIR}/cstoolkit/CSToolkitStarlinx.cmake")
    cstoolkit_fetch_artifactory("QstBase" VERSION "2.1.9" FOLDER "release/Libraries/Qst" QT)
    cstoolkit_fetch_artifactory("QstModules" VERSION "2.1.16" FOLDER "release/Libraries/Qst" QT)
    if(WIN32)
        if(LICENSE)
			cstoolkit_fetch_artifactory("ApiLicensing" FOLDER "release/Libraries" VERSION "6.0.4")
            set(TARGET_LICENSE ApiLicensing::ApiLicensing)
		endif()
        cstoolkit_fetch_artifactory("Cryptopp" VERSION "5.6.5-2")
    else()
		if(LICENSE)
			cstoolkit_fetch_artifactory("ApiLicensing" URL "http://artifactory.divst:8081/artifactory/release/Libraries/ApiLicensing/6.0.2/ApiLicensing_6.0.2_linux_gcc11.3-x64.7z")
		endif()
        cstoolkit_fetch_artifactory("Cryptopp" URL "http://artifactory.divst:8081/artifactory/thirdParty/Cryptopp/5.6.5-2/Cryptopp_5.6.5-2_linux-gcc11.3-x64.7z")
    endif()
    if(LICENSE)
        cstoolkit_download_url("http://10.20.1.10:8081/artifactory/thirdParty/HASP/8.4/Delivery_GEMALTO/Delivery_GEMALTO_8.4_20220914.zip" HASP_PATH)
    endif()
    cstoolkit_download_url("http://10.20.1.10:8081/artifactory/release/EULA/1.0/EULA.rtf" EULA_PATH NO_EXTRACT)
endif()

add_subdirectory(SwCore)
add_subdirectory(SwExecution)
add_subdirectory(SwFoundation)
add_subdirectory(Services/SwServiceMainWindow)
add_subdirectory(SwGui)
add_subdirectory(Services/SwServiceConfiguration)
add_subdirectory(Services/SwServiceShortcut)
add_subdirectory(Services/SwServiceTools)
add_subdirectory(SwEditor)
add_subdirectory(SwModel)
add_subdirectory(StreamWorkEditor)
add_subdirectory(SwConfiguration)
add_subdirectory(SwDataBase)
add_subdirectory(SwLauncher)
add_subdirectory(SwRecord)